<?xml version="1.0"?>
<package format="3">
  <name>andino_gz_demos</name>
  <version>0.0.1</version>
  <description>
    Demos on top of andino_gz simulation.
  </description>
  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>andino_gz</exec_depend>
  <exec_depend>andino_slam</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
